--- a/HW_02_Launching_Code.ipynb
+++ b/HW_02_Launching_Code.ipynb
@@ -12,8 +12,8 @@
     "# HW02 Solution\n",
     "# Differences of methods to find the 5-number summary via self meade code or imported methods.\n",
     "# https://github.com/JoseALaza/CS301\n",
-    "# link-to-the-relevant-git-commit (ex: https://github.com/cww5/web_scraper/tree/60e907c00ecbe21bc6a543621c9683ebf7f9693a)\n",
-    "# name-of-the-branch (ex: master)"
+    "# https://github.com/JoseALaza/CS301/HW_02_Launching_Code.ipynb/2c433de9644c6494566f86e5408319242d0ed5fb\n",
+    "# master"
    ]
   },
   {
