--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jose Alonso Lazarte\n",
+    "# 20190217\n",
+    "# CS301-006, Professor Watson\n",
     "# HW03 Solution\n",
     "# Importas CSV data with exception handling and statistical analysis.\n",
     "# https://github.com/JoseALaza/CS301/\n",
